--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div><h1 id="mainPhrase">DOSPROK's Developer Personal Page</h1></div>
         <nav>
             <div>
-            <a href="https://steamcommunity.com/id/DOSPROK" target="_blank"><img title="Logo of the DOSPROK" id="logo"
+            <a href="https://github.com/DOSPROK" target="_blank"><img title="Logo of the DOSPROK" id="logo"
                                                                                  class="logo"
                                                                                  src="img/logoMain.jpg"
                                                                                  alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk17lJ6ks84r4fVFTmjv6SAJuRVtkGoFEifQ&usqp=CAU"></a>
